<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#c1c1c1"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/_0_0"
        />
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/Grid_calculator"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"

        android:padding="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp">

        <Button
            android:id="@+id/One"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="inputcollection"
            android:text="@string/_1" />

        <Button
            android:id="@+id/Two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="inputcollection"
            android:text="@string/_2" />

        <Button
            android:id="@+id/Three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="inputcollection"
            android:layout_margin="5dp"
            android:text="@string/_3" />
        <Button
            android:onClick="oprator"
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Plus" />
        <!--Row 1-->
        <Button
            android:onClick="inputcollection"
            android:id="@+id/Four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/_4"
            app:layout_column="0"
            app:layout_row="1" />
        <Button
            android:onClick="inputcollection"
            android:id="@+id/Five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/_5"
        />
        <Button
            android:onClick="inputcollection"
            android:id="@+id/Siz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/_6"
            />
        <Button
            android:onClick="oprator"
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Sub" />
        <!--Row 2-->
        <Button
            android:onClick="inputcollection"
            android:id="@+id/Seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/_7"
            app:layout_column="0"
            app:layout_row="2"
            />
        <Button
            android:onClick="inputcollection"
            android:id="@+id/Eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/_8"
            />
        <Button
            android:onClick="inputcollection"
            android:id="@+id/Nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/_9"
            />
        <Button
            android:onClick="oprator"
            android:id="@+id/mult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Mul"
            />
        <!--Last Row-->
        <Button

            android:id="@+id/Clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/clear"
            app:layout_row="3"
            app:layout_column="0"
            android:onClick="oprator"
            />
        <Button
            android:onClick="inputcollection"
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/_0"
            />
        <Button
            android:onClick="inputcollection"
            android:id="@+id/Point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/point"
            />
        <Button
            android:onClick="oprator"
            android:id="@+id/Dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/dev"
            />

        <Button
            android:onClick="oprator"
            android:id="@+id/Equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="="
            app:layout_column="0"
            app:layout_row="4" />
    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>